cant get stryker to work

--- a/OLA1-SofQuality.csproj
+++ b/OLA1-SofQuality.csproj
@@ -8,7 +8,9 @@
 
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
+        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
         <GenerateProgramFile>false</GenerateProgramFile> <!-- Add this line -->
+        <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
     </PropertyGroup>
 
     <ItemGroup>
