still cant get stryker to work

--- a/test/OLA1-SofQuality.test/OLA1-SofQuality.test.csproj
+++ b/test/OLA1-SofQuality.test/OLA1-SofQuality.test.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>OLA1_SofQuality.test</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <ItemGroup>
